--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1894bbb0d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f32cbe7d450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1894886f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f189488c150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f32cbb5bd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f32cbb530d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1894e398d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1894e39ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f32cc101910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f32cc101b10&gt;]</pre>
 </div>
 
 </div>
