--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f32cbe7d450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cfbb36390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f32cbb5bd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f32cbb530d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cfb8240d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cfb8242d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f32cc101910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f32cc101b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cfbdd49d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cfbdd4bd0&gt;]</pre>
 </div>
 
 </div>
