--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cfbb36390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73304d2fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cfb8240d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cfb8242d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f733015ef10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f733017a150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cfbdd49d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cfbdd4bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f733072c850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f733072ca50&gt;]</pre>
 </div>
 
 </div>
