--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73304d2fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6594a69f90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f733015ef10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f733017a150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f659471bdd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f659471bfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f733072c850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f733072ca50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6594ce9690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6594ce9890&gt;]</pre>
 </div>
 
 </div>
