--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f68f6f00a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14bff32310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68f6beaf50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68f6bf0190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f14bfc666d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f14bfc0d150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68f719f850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68f719fa50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f14c020d410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f14c01b9990&gt;]</pre>
 </div>
 
 </div>
