--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbcef5dc390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa926167b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbceefea910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbcef2a0f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa925df5f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa925e0e150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbcef86c710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbcef86c910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9263c0890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9263c0a90&gt;]</pre>
 </div>
 
 </div>
