--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa926167b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f858ea91810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa925df5f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa925e0e150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f858e761f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f858e779150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9263c0890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9263c0a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f858ed2b850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f858ed2ba50&gt;]</pre>
 </div>
 
 </div>
