--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f858ea91810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f79a09d2c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f858e761f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f858e779150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79a036be90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79a038c0d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f858ed2b850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f858ed2ba50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79a092c750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79a092c950&gt;]</pre>
 </div>
 
 </div>
