--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdd1ad3fe50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa2a70f8550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd1ade3950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd1aa10fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2a6d7dd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2a6d7df90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd1afde6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd1afde910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2a73496d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2a73498d0&gt;]</pre>
 </div>
 
 </div>
