--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8008ecbd10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14dd3ddc90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8008820e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8008820fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f14dd0b8cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f14dd0b8ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8008dec7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8008dec9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f14dd66f690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f14dd66f890&gt;]</pre>
 </div>
 
 </div>
