--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14dd3ddc90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae4ef0bdd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14dd0b8cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14dd0b8ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae4ebc9f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae4ebe0190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14dd66f690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14dd66f890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae4ef32890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae4f18d9d0&gt;]</pre>
 </div>
 
 </div>
