--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f44db5bd590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f81c55b1050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44db2a7e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44db2bb0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f81c5271050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f81c5271250&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44db85c7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44db85c9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f81c5808950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f81c5808b50&gt;]</pre>
 </div>
 
 </div>
