--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff74dccdc10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6fa39bf890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff74d986e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff74d986fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6fa36aa090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6fa36aa290&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff74df54750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff74df54950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6fa3c58990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6fa3c58b90&gt;]</pre>
 </div>
 
 </div>
