--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae6339ddd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f362a2d9d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fae63079e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fae63099090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3629fa4410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3629f9c110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fae6363b750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fae6363b950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f362a54b790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f362a54b990&gt;]</pre>
 </div>
 
 </div>
