--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f362a2d9d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe400c9d850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3629fa4410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3629f9c110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe40063ab50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe4005fef90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f362a54b790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f362a54b990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe400bbf3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe400bc98d0&gt;]</pre>
 </div>
 
 </div>
