--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4dd74b6910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ccd6a74d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4dd715ded0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4dd7176110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ccd37ff90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ccd3831d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4dd77287d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4dd77289d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ccd933950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ccd933b50&gt;]</pre>
 </div>
 
 </div>
