--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe47f2f5950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f01a242f210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe47efd44d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe47efe2190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f019c4c8e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f019c4fc090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe47f57b7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe47f57b9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f019ca95790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f019ca95990&gt;]</pre>
 </div>
 
 </div>
