--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbfaa3c1510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9371d2150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfaa046f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfaa062190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa936e95090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa936e95290&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfaa610910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfaa610b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa937443950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa937443b50&gt;]</pre>
 </div>
 
 </div>
