--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1965193750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45086daa90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1964e4ded0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1964e80110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4509353f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f450838dfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1965419850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1965419a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f450895a810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f450895aa10&gt;]</pre>
 </div>
 
 </div>
