--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5755a7510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f647c41df50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb575283250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5752780d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f647c0bd690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f647c0be350&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb57582a810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb57582aa10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f647c6d3f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f647c66cc50&gt;]</pre>
 </div>
 
 </div>
