--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f647c41df50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6bd3a70790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f647c0bd690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f647c0be350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6bd3767d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6bd375c0d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f647c6d3f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f647c66cc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6bd3d0d810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6bd3d0da10&gt;]</pre>
 </div>
 
 </div>
